Use JDK 12 for tests.